--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,5 +15,7 @@ numeric-enum-macro = "0.2"
 axerrno = "0.1.0"
 percpu = "0.1.4"
 
-axaddrspace = { git = "https://github.com/arceos-hypervisor/axaddrspace.git" }
-axvcpu = { git = "https://github.com/arceos-hypervisor/axvcpu.git" }
+# axaddrspace = { git = "https://github.com/arceos-hypervisor/axaddrspace.git" }
+axaddrspace = { path = "../axaddrspace" }
+# axvcpu = { git = "https://github.com/arceos-hypervisor/axvcpu.git" }
+axvcpu = { path = "../axvcpu" }
